<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context="com.CS.sound_ccis.MainPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/welcome_Message"
        android:textColor="@color/green"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/new_registar"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/main_butten"
            android:text="@string/new_registar"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <Button
            android:id="@+id/logIn"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="30dp"
            android:background="@drawable/main_butten"
            android:text="@string/login_registar"
            android:textColor="@color/white"
            android:textSize="30dp" />

    </LinearLayout>

</LinearLayout>