<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.CS.sound_ccis.LogIn">


    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="346dp"
            android:layout_height="337dp"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/logIn"
                android:textColor="@color/green"
                android:textSize="30sp" />


            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textbox"
                android:drawableRight="@drawable/mail"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"

                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/textbox"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="*********"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding">

                </com.google.android.material.textfield.TextInputEditText>

                <RadioGroup
                    android:id="@+id/Choes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/Admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Admin" />

                    <RadioButton
                        android:id="@+id/User"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/User" />
                </RadioGroup>

                <TextView
                    android:id="@+id/forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/Forget"
                    android:textColor="@color/red" />


            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/entry"
                    android:layout_width="234dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/butten"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textSize="24sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>