<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.CS.sound_ccis.Forget_password">


    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="90dp"
            android:layout_height="337dp"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/forgetPassword"
                android:textColor="@color/green"
                android:textSize="30sp" />


            <EditText
                android:id="@+id/Email_Valid"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textbox"
                android:drawableRight="@drawable/mail"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding" />


            <Button
                android:id="@+id/Vaildation"
                android:layout_width="234dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/butten"
                android:gravity="center"
                android:text="@string/Validation"
                android:textSize="24sp" />

        </LinearLayout>







</LinearLayout>
</LinearLayout>