<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.CS.sound_ccis.Desplay_QuestionsAndAnswer">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Question"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/butten"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/Question"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Answer"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:background="@drawable/butten"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/Answer"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Keyword"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:background="@drawable/butten"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/Keyword"
                android:textSize="14sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/listViwe"
            style="@style/Widget.AppCompat.Light.ListView.DropDown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fadingEdge="none"
            android:scrollbars="none">

        </ListView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ADD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="20dp"
        android:src="@drawable/but_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>