<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Question"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/display_question"
            android:gravity="center"

            android:hint="@string/Question"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/Answer"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:background="@drawable/display_question"
            android:gravity="center"

            android:hint="@string/Answer"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/Keyword"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:background="@drawable/display_question"
            android:gravity="center"

            android:hint="@string/Keyword"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:overScrollMode="always"
            android:padding="5dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/keyword_2"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:background="@drawable/display_question"

            android:gravity="center"
            android:hint="@string/Keyword"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:overScrollMode="always"
            android:padding="5dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/keyword_3"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:background="@drawable/display_question"

            android:gravity="center"
            android:hint="@string/Keyword"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:overScrollMode="always"
            android:padding="5dp"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/Update"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:background="@drawable/textbox"
            android:gravity="center"
            android:padding="5dp"
            android:src="@drawable/update"
            android:text="Update"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/Delete"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:background="@drawable/textbox"
            android:gravity="center"
            android:padding="5dp"
            android:src="@drawable/delete"
            android:text="Delete"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/but_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/butten"
        android:text="@string/Add" />
</LinearLayout>