<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.CS.sound_ccis.new_regeister">


    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="337dp"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/new_registar"
                android:textColor="@color/green"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/FristName"
                android:layout_width="298dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textbox"
                android:drawableRight="@drawable/personal"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/frist_Name"
                android:inputType="textPersonName"
                android:padding="@dimen/padding" />


            <EditText
                android:id="@+id/LastName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textbox"
                android:drawableRight="@drawable/personal"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/Last_Name"
                android:inputType="text"
                android:padding="@dimen/padding" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/textbox"
                android:drawableRight="@drawable/mail"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"

                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/textbox"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="*********"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/textbox"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="*********"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Sign_up"
            android:layout_width="234dp"
            android:layout_height="55dp"
            android:background="@drawable/butten"
            android:gravity="center"
            android:text="@string/registar" />

    </LinearLayout>


</LinearLayout>